# cmake_wmake_dos16_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.c
